kubebox-server/build/kubebox-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubebox
  labels:
    template: kubebox
spec:
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 43200
  ports:
    - name: kubebox
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    name: kubebox
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubebox
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.allow-http: "true"
    ingress.kubernetes.io/ssl-redirect: "false"
    # ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.org/websocket-services: "kubebox"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: kubebox
          servicePort: 8080
        path: /terminal(/|$)(.*)
    # TO BE UPDATED IF NEEDED
#    host: box.pcl.ac.cn
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubebox
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: kubebox
  template:
    metadata:
      name: kubebox
      labels:
        name: kubebox
    spec:
      serviceAccountName: kubebox
      containers:
      - image: openi/kubebox-server:1.6
        imagePullPolicy: Always
        name: kubebox
        ports:
        - containerPort: 8080
          protocol: TCP
